<resources>
    <string name="app_name">FigmaTaskApp</string>
    <string name="continue_button">Continue</string>
    <string name="continue_bubbles">continue_bubbles</string>
    <string name="skip_btn">Skip</string>
    <string name="description_home_screen">Its very difficult to manage everything. This is a tool designed to help you manage your time.</string>
    <string name="first_screen_title_1">Manage your time</string>
    <string name="first_screen_title_2">Work on time</string>
    <string name="first_screen_title_3">Have everything planned</string>
    <string name="today">Today</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="confirm_date">Confirm</string>
    <string name="my_task">My Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="snack_bar_undo_delete">Task Deleted</string>
    <string name="undo_delete">UNDO</string>
    <string name="new_title">New Title</string>
    <string name="new_description">New Description</string>
    <string name="create_new_task">Create new Task</string>
    <string name="remind_me">Remind me</string>
</resources>