<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#13141B"
    tools:context=".ViewTaskActivity">
    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:background="@drawable/background_contrast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="117dp"
        android:layout_height="42dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/skip_btn"
        android:clickable="false"
        android:elevation="4dp"
        android:fontFamily="@font/lobster"
        android:text="@string/title"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:theme="@style/skip_button"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/skip_btn"
        android:clickable="false"
        android:elevation="4dp"
        android:fontFamily="@font/lobster"
        android:text="@string/description"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="16sp"
        android:theme="@style/skip_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_edit_title_input" />

    <ImageButton
        android:id="@+id/back_arrow_btn_edit_task_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/back_button"
        android:theme="@style/back_arrow_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_edit_title_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="#9DC4FF"
        android:hint="@string/new_title"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_edit_description_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#9DC4FF"
        android:hint="@string/new_description"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/date_edit_task_layout"
        android:layout_width="183dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/skip_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3">

        <ImageView
            android:id="@+id/image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            app:srcCompat="@drawable/timeline_week" />

        <TextView
            android:id="@+id/task_edit_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/lobster"
            android:text="01, January, 2021"
            android:textColor="#ffff"
            android:textSize="11sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/task_edit_date_text"
            android:layout_marginLeft="17dp"
            android:layout_toRightOf="@id/image2"
            android:fontFamily="@font/lobster"
            android:text="Date"
            android:textColor="#007ABF"
            android:textSize="10sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/edit_task_start_time_layout"
        android:layout_width="85dp"
        android:layout_height="25dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/start_time_btn"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_edit_task_layout"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/image3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            app:srcCompat="@drawable/clock" />

        <TextView
            android:id="@+id/edit_task_start_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/lobster"
            android:text="3:00 PM"
            android:textColor="#ffff"
            android:textSize="9sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_task_start_time_text"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@id/image3"
            android:fontFamily="@font/lobster"
            android:text="Task Start"
            android:textColor="#007ABF"
            android:textSize="7sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/edit_task_end_time_layout"
        android:layout_width="85dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/end_time_btn"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toEndOf="@+id/edit_task_start_time_layout"
        app:layout_constraintTop_toBottomOf="@+id/date_edit_task_layout"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/image4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            app:srcCompat="@drawable/clock" />

        <TextView
            android:id="@+id/edit_task_end_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/lobster"
            android:text="4:00 PM"
            android:textColor="#ffff"
            android:textSize="9sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_task_end_time_text"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@id/image4"
            android:fontFamily="@font/lobster"
            android:text="Task End"
            android:textColor="#007ABF"
            android:textSize="7sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="183dp"
        android:layout_height="40dp"

        android:layout_marginBottom="84dp"
        android:background="@drawable/skip_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/clockImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/reminder"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Has Reminder"
            android:textSize="12sp"
            android:fontFamily="@font/lobster"
            android:textColor="#ffff"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/edit_task_reminder_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="8dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/lobster"
        android:text="@string/my_task"
        android:textColor="#ffff"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <Button
        android:id="@+id/confirm_change_task_btn"
        android:layout_width="262dp"
        android:layout_height="57dp"
        android:fontFamily="@font/lobster"
        android:text="Confirm Changes"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.407" />


</androidx.constraintlayout.widget.ConstraintLayout>